# papers_visualization

./: .gitignore  README.md  cvpr_download.ipynb  papers_collect.py  papers_visualize.py  pyproject.toml  requirements.txt  sandbox.ipynb  visualize_notebook.ipynb
notebooks/: cvpr_download.ipynb  iclr_download.ipynb  papers_visualize.ipynb  sandbox.ipynb
papers_collect/: cvpr.py
src/: cvpr.py  iccv.py  iclr.py
